# climate-action-api-gateway

./: .env.base_template  .env_template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.Kaniko  README.md  pyproject.toml  run-alembic.sh
.gitlab/: renovate.json
.gitlab/issue_templates/: Default.md
api_gateway/: __init__.py  dlq_handler.py  sender.py
api_gateway/app/: api.py  settings.py  utils.py
api_gateway/app/route/: computation.py  health.py  metadata.py  plugin.py  store.py
test/: conftest.py  test_dlq_handler.py  test_sender.py
test/app/route/: test_computation.py  test_metadata.py  test_plugin.py  test_store.py
test/resources/locales/: messages.pot
test/resources/locales/de/: methodology.md  purpose.md
test/resources/locales/de/LC_MESSAGES/: messages.mo  messages.po
