[tool.poetry]
name = "api-gateway"
version = "2.2.0"
description = "The api gateway is the main contact point of the climate action architecture und separates the user realm from the backend."
authors = ["Maciej Adamiak <maciej.adamiak@heigit.org>",
    "Moritz Schott <moritz.schott@heigit.org>",
    "Danielle Gatland <danielle.gatland@heigit.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.5"
fastapi = "^0.115.5"
starlette = "^0.41.3"
websockets = "^14.1"
uvicorn = { extras = ["standard"], version = "^0.32.1" }
fastapi-cache2 = {extras = ["memcache"], version = "^0.2.2"}
climatoology = { git = "ssh://git@gitlab.heigit.org:2022/climate-action/climatoology.git", tag = "6.2.0" }
semver = "^3.0.2"
pydantic = "^2.10.2"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
