[project]
name = "api-gateway"
version = "2.3.2"
description = "The api gateway is the main contact point of the climate action architecture und separates the user realm from the backend."
authors = [
    { name = "Maciej Adamiak", email = "maciej.adamiak@heigit.org" },
    { name = "Moritz Schott", email = "moritz.schott@heigit.org" },
    { name = "Danielle Gatland", email = "danielle.gatland@heigit.org" },
]
readme = "README.md"
repository = "https://gitlab.heigit.org/climate-action/api-gateway"

requires-python = ">=3.11.5,<3.12"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "starlette (>=0.47.0,<0.48.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "fastapi-cache2[memcache] (>=0.2.2,<0.3.0)",
    "climatoology @ git+ssh://git@gitlab.heigit.org:2022/climate-action/climatoology.git@6.4.3",
    "semver (>=3.0.2,<4.0.0)",
    "pydantic (>=2.10.2,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
celery-types = "^0.23.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-postgresql = "^7.0.1"
httpx = "^0.28.1"
freezegun = "^1.5.5"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select = [
    # defaults
    "F",
    "E4", "E7", "E9",
    # additional
    "A", # be sure not to shadow built-in functions
    "I", # isort to sort imports
    "N", # check for use of PEP8 naming conventions
    # docstring cleaning
    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",
    # auto-remove unused 'noqa' comments
    "RUF100", "RUF101",
]

[tool.coverage.run]
omit = ["test/*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
